Fix card spacing issue

--- a/src/styles/ArticlePage.css
+++ b/src/styles/ArticlePage.css
@@ -10,8 +10,6 @@
   margin-top: 50px;
   margin-bottom: 50px;
   max-width: 250px;
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 .articles-total .article-card .article-card-image {
