--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -52,6 +52,7 @@ header h1 {
   position: relative;
   margin-top: 40px;
   margin-right: 10px;
+  max-height: 300px;
 }
 
 .react-autosuggest__input {
